fix(style)formatting, alignments head/foot

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,10 +2,7 @@
 
 /* Global Styling */
 * {
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 0;
-    margin-bottom: 0;
+    margin: 0;
     padding: 0;
     border: none;
 }
@@ -35,29 +32,75 @@ p {
 /* header styling */
 header {
     background-color: #2D8A60;
+    width: 100%;
     min-height: 100px;
+    display: flex;
+    flex-direction: row;
+    margin-left: 0;
+}
+
+header a {
+    width: 15%;
+    min-height: 100px;
+    min-width: 200px;
 }
 
 /* the logo is square, so if the width is set the height will match and vise versa */
 .header-logo {
-
-    width: 15%;
+    width: inherit;
+    margin-left: 0;
     min-height: 100px;
     min-width: 200px;
     background-color: #2D8A60;
 }
 
+/*Styling the header menu */
+
+.header-menu {
+    width: 85%;
+    font-size: 150%;
+    color: #FFFFFF;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.header-menu li {
+    list-style-type: none;
+    margin-right: 30px;
+    display: inline;
+}
+
+.header-menu a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
+.header-menu a:hover {
+    color: #C9F0FF;
+    border-bottom: 1px solid #C9F0FF;
+}
+
+.active {
+    border-bottom: 1px solid #FFFFFF;
+}
+
 /* Footer styling */
 footer {
+    width: 100%;
     height: 100px;
     display: flex;
     flex-direction: row;
+    justify-content: center;
     background-color: #2D8A60;
 }
 
 .social-networks {
     text-align: center;
     display: flex;
+
+    align-items: center;
     flex-direction: row;
 }
 
